--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 build:
   stage: build
   script:
-    - docker build -t dockerlocal . -m 16g
+    - docker build -t dockerlocal . -m 16g --no-cache
     - docker tag dockerlocal gitlab.cs.virginia.edu:5099/physicalsemantics/peirce-docker-builder
     - docker push gitlab.cs.virginia.edu:5099/physicalsemantics/peirce-docker-builder
     - docker tag dockerlocal gitlab.cs.virginia.edu:5099/physicalsemantics/peirce
