--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,11 +5,12 @@ stages:
 build:
   stage: build
   script:
-    - docker build -t dockerlocal . -m 16g --no-cache
-    - docker tag dockerlocal gitlab.cs.virginia.edu:5099/physicalsemantics/peirce-docker-builder
-    - docker push gitlab.cs.virginia.edu:5099/physicalsemantics/peirce-docker-builder
+    - docker build -t dockerlocal . -m 16g
     - docker tag dockerlocal gitlab.cs.virginia.edu:5099/physicalsemantics/peirce
     - docker push gitlab.cs.virginia.edu:5099/physicalsemantics/peirce
+    - docker tag dockerlocal gitlab.cs.virginia.edu:5099/physicalsemantics/peirce-docker-builder
+    - docker push gitlab.cs.virginia.edu:5099/physicalsemantics/peirce-docker-builder
+
     - echo 1 > output.txt
 
   artifacts:
