--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,9 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.191.0/containers/ubuntu
 {
-	"image": "kevinsullivan/leanvm",
-	"name": "myleanvm",
+	"name": "leanvm",
 	"build": {
 		"dockerfile": "Dockerfile",
-		// Update 'VARIANT' to pick an Ubuntu version: focal, bionic
 		"args": { "VARIANT": "focal" }
 	},
 
@@ -14,7 +12,31 @@
 
 
 	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [],
+	"extensions": [
+		"ms-vscode.cpptools",
+		"ms-vsliveshare.vsliveshare",
+		"ms-vscode-remote.remote-containers",
+		"mitaki28.vscode-clang",
+		"christian-kohler.path-intellisense",
+		"yzhang.markdown-all-in-one",
+		"goessner.mdmath",
+		"davidanson.vscode-markdownlint",
+		"mathematic.vscode-pdf",
+		"ms-azuretools.vscode-docker",
+		"eamodio.gitlens",
+		"coenraads.bracket-pair-colorizer",
+		"stephanvs.dot",
+		"karigari.chat",
+		"jroesch.lean",
+		"llvm-vs-code-extensions.vscode-clangd",
+		"ms-vscode.vscode-typescript-next",
+		"rbbit.typescript-hero",
+		"tomoki1207.pdf",
+		"gitlab.gitlab-workflow",
+		"ms-vsliveshare.vsliveshare",
+		"ms-vsliveshare.vsliveshare-audio",
+		"ms-vsliveshare.vsliveshare-pack",
+	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
@@ -23,6 +45,6 @@
 	// "postCreateCommand": "uname -a",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	// "remoteUser": "vscode"
 }
 
