--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,10 +13,11 @@
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"ms-vscode.cpptools",
+		"ms-vscode-remote.remote-ssh",
 		"ms-vsliveshare.vsliveshare",
+		"ms-vsliveshare.vsliveshare-audio",
+		"ms-vsliveshare.vsliveshare-pack",
 		"ms-vscode-remote.remote-containers",
-		"mitaki28.vscode-clang",
 		"christian-kohler.path-intellisense",
 		"yzhang.markdown-all-in-one",
 		"goessner.mdmath",
@@ -26,25 +27,17 @@
 		"eamodio.gitlens",
 		"coenraads.bracket-pair-colorizer",
 		"stephanvs.dot",
-		"karigari.chat",
 		"jroesch.lean",
-		"llvm-vs-code-extensions.vscode-clangd",
-		"ms-vscode.vscode-typescript-next",
-		"rbbit.typescript-hero",
-		"tomoki1207.pdf",
-		"gitlab.gitlab-workflow",
-		"ms-vsliveshare.vsliveshare",
-		"ms-vsliveshare.vsliveshare-audio",
-		"ms-vsliveshare.vsliveshare-pack",
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	"forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uname -a",
+	"postCreateCommand": "uname -a",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	// "remoteUser": "vscode"
+	"remoteUser": "vscode"
+
 }
 
