--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,7 +7,7 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive
 RUN echo 'debconf debconf/frontend select Noninteractive' | debconf-set-selections
 
-# Update Ubuntu and configure platform basics
+# Update and configure Ubuntu 
 RUN apt-get clean && apt-get update -y && apt-get upgrade -y
 RUN apt-get install -y locales && locale-gen en_US.UTF-8  
 ENV LANG en_US.UTF-8  
@@ -17,16 +17,19 @@ WORKDIR /root
 # COPY .devcontainer/.profile.txt /root/.profile
 VOLUME /hostdir
 
-# Install development platform and Python3
+# Install Python3
 RUN apt-get -y install lsb-release build-essential git vim wget gnupg curl python3-pip python3-venv python3-dev libssl-dev libffi-dev libconfig-dev
 ENV PYTHONIOENCODING utf-8
 RUN python3 -m pip install pipx
 RUN python3 -m pipx ensurepath --force 
 RUN . ~/.profile
 
-# Install Lean using elan
+# Install Lean
 RUN curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- -y 
 ENV LEAN_PATH /root/.elan/toolchains/stable/lib/lean/library:/root/.lean/_target/deps/mathlib/src
 ENV PATH=/root/.elan/bin:${PATH}
 RUN pipx install mathlibtools
 RUN /root/.local/bin/leanproject global-install
+
+# That's it
+#
